--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,14 @@ jobs:
             echo "Error: Version from file is empty" >&2
             exit 1
           fi
+          echo "TAG_NAME=$VERSION"
           echo "TAG_NAME=$VERSION" >> $GITHUB_ENV
 
       - name: Get previous tag
         id: get_prev_tag
         run: |
           PREV_TAG=$(git tag --sort=-v:refname | head -n 1)
+          echo "PREV_TAG=$PREV_TAG"
           echo "PREV_TAG=$PREV_TAG" >> $GITHUB_ENV
 
       - name: Validate version
