--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,18 +29,9 @@ jobs:
       - name: Get previous tag
         id: get_prev_tag
         run: |
-          PREV_TAG=$(git tag --sort=-v:refname | head -n 1)
+          PREV_TAG=$(git tag --sort=-v:refname | head -n 1 2>/dev/null)
           echo "PREV_TAG=$PREV_TAG"
           echo "PREV_TAG=$PREV_TAG" >> $GITHUB_ENV
-
-      - name: Validate version
-        run: |
-          if [ -n "$PREV_TAG" ]; then
-            if printf "%s\n%s" "$PREV_TAG" "$TAG_NAME" | sort -V | head -n 1 | grep -qx "$TAG_NAME"; then
-              echo "Error: New version ($TAG_NAME) is less than or equal to the previous version ($PREV_TAG)" >&2
-              exit 1
-            fi
-          fi
 
       - name: Generate release notes
         id: generate_notes
